$Cambridge: exim/doc/doc-txt/ChangeLog,v 1.547 2008/05/16 12:02:19 nm4 Exp $

Change log file for Exim from version 4.21
-------------------------------------------

Exim version 4.70
-----------------

TK/01 Added patch by Johannes Berg that expands the main option
      "spamd_servers" if it starts with a dollar sign.

TK/02 Write list of recipients to X-Envelope-Sender header when building
      the mbox-format spool file for content scanning (suggested by Jakob
      Hirsch)

TK/03 Added patch by Wolfgang Breyha that adds experimental DCC
      (http://www.dcc-servers.net/) support via dccifd. Activated by
      setting EXPERIMENTAL_DCC=yes in Local/Makefile. Check out
      experimental_spec.txt for more documentation.

TK/04 Bugzilla 673: Add f-protd malware scanner support. Patch submitted
      by Mark Daniel Reidel <mr@df.eu>.

NM/01 Bugzilla 657: Embedded PCRE removed from the exim source tree.
      When building exim an external PCRE library is now needed -
      PCRE is a system library on the majority of modern systems.
      See entry on PCRE_LIBS in EDITME file.

NM/02 Bugzilla 646: Removed unwanted C/R in Dovecot authenticator
      conversation.  Added nologin parameter to request.
      Patch contributed by Kirill Miazine

TF/01 Do not log submission mode rewrites if they do not change the address.

TF/02 Bugzilla 662: Fix stack corruption before exec() in daemon.c.

NM/03 Bugzilla 602: exicyclog now handles panic log, and creates empty
      log files in place.  Contributed by Roberto Lima

NM/04 Bugzilla 667: close socket used by dovecot authenticator

TF/03 Bugzilla 615: When checking the local_parts router precondition
      after a local_part_suffix or local_part_prefix option, Exim now
      does not use the address's named list lookup cache, since this
      contains cached lookups for the whole local part.

NM/05 Bugzilla 521: Integrated SPF Best Guess support contributed by
      Robert Millan.  Documentation is in experimental-spec.txt
